Fix search box layout on mobile

--- a/src/components/search-input.css
+++ b/src/components/search-input.css
@@ -7,6 +7,7 @@
 
 .SearchInput-input {
   flex-grow: 1;
+  min-width: 60px;
   padding: 7px;
   border: none;
 }
